# dist-rust-buted-2

./: .env.example  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/diagrams/: math-service-diagram.d2
docs/tasks/: dst-pfm.md  svc-dsc.md  svc-mat.md
examples/: calc.rs
proto/: hello.proto  math.proto  serdict.proto
src/: lib.rs
src/dst_pfm/: lib.rs  mod.rs
src/hello/: client.rs  server.rs
src/svc_dsc/: client.rs  mod.rs
src/svc_dsc/server/: main.rs  mod.rs  serdict.rs
src/svc_mat/: mod.rs
src/svc_mat/add/: client.rs  mod.rs  server.rs
src/svc_mat/calc/: client.rs  expression.rs  mod.rs  parse.rs  server.rs
src/svc_mat/div/: client.rs  mod.rs  server.rs
src/svc_mat/mul/: client.rs  mod.rs  server.rs
src/svc_mat/sub/: client.rs  mod.rs  server.rs
